WebDeploy/manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pharm-sim
  labels:
    app: pharm-sim
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pharm-sim
  template:
    metadata:
      labels:
        app: pharm-sim
    spec:
      containers:
        - name: pharm-sim
          image: dominicnygard/pharm-sim:staging
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "50Mi"
              cpu: "50m"
