WebDeploy/manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pharm-sim
spec:
  selector:
    app: pharm-sim
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
