WebDeploy/manifests/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pharm-sim
spec:
  to:
    kind: Service
    name: pharm-sim
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
